crates/tui/snapshots/fullscreen/home/home_after_first_character.snap
---
source: crates/tui/src/app/fullscreen/home_tests.rs
expression: rendered
---
  .                                                                [Dashboard]  
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  ────────────────────────────────────────────────────────────────────────────  
  > x                                                                           
  ─────────────────────────────────────────────────────────── Automatic model   
                                                                                
  ⏸ Manual
