crates/tui/snapshots/fullscreen/home/home_dashboard_session_manager.snap
---
source: crates/tui/src/app/fullscreen/home_tests.rs
expression: "text(&render(&app, 80, 24))"
---
  .                                                                [Dashboard]  
                                                                                
─ Dashboard ───────────────────────────────────────────────── Group: Status  g ─
                                                                                
> Archived (0)                                                                  
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  Enter/→ to expand · g to group · Esc to return
