crates/tui/snapshots/fullscreen/home/home_draft.snap
---
source: crates/tui/src/app/fullscreen/home_tests.rs
expression: "text(&render(&app, terminal.width, terminal.height))"
---
  .                                                                                                                            [Dashboard]  
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
  ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────  
  > 检 查 项 目 结 构                                                                                                                             
  ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── Automatic model   
                                                                                                                                            
  ⏸ Manual
