crates/tui/snapshots/fullscreen/home/home_input_chinese.snap
---
source: crates/tui/src/app/fullscreen/home_tests.rs
expression: rendered
---
  .                                                                   [仪 表 盘 ]  
                                                                                
  ╭──────────────────────────────────────────────────────────────────────────╮  
  │                                                                          │  
  │    ▄  ▄      Ash Code v0.1.0                                             │  
  │  ▗█▛██▜█▖                                                                │  
  │  ▝▜████▛▘    在 下 方 开 始 任 务 ， 或 继 续 之 前 的 会 话 。                           │  
  │    ▝  ▘                                                                  │  
  │              新 建 工 作 树                                                   │  
  │              恢 复 会 话                                                     │  
  │              设 置                                                         │  
  │              帮 助 与 快 捷 键                                                 │  
  │              退 出                                                         │  
  │                                                                          │  
  ╰──────────────────────────────────────────────────────────────────────────╯  
                                                                                
                                                                                
                                                                                
                                           输 入 任 务 以 开 始 ， 或 按  Tab 选 择 操 作 。   
  ────────────────────────────────────────────────────────────────────────────  
  >                                                                             
  ────────────────────────────────────────────────────────────────── 自 动 模 型    
                                                                                
  ⏸ 手 动  · ← 仪 表 盘  · ? 查 看 快 捷 键
