crates/tui/snapshots/fullscreen/home/home_narrow.snap
---
source: crates/tui/src/app/fullscreen/home_tests.rs
expression: "text(&render(&app, 40, 16))"
---
  .                        [Dashboard]  
                                        
  ╭──────────────────────────────────╮  
  │                                  │  
  │  Ash Code v0.1.0                 │  
  │  Resume session                  │  
  │  Settings                        │  
  │  Help and shortcuts              │  
  │> Quit                            │  
  ╰──────────────────────────────────╯  
             Type a task · Tab actions  
  ────────────────────────────────────  
  > Build anything                      
  ─────────────────── Automatic model   
                                        
  Enter select · Esc input
